sort.basic.lessons.sort.basic.bubble.AlgBubbleSort2.scala.error
AlgBubbleSort2:7: error: illegal start of simple expression
    for (i<-0 to indice-2)){
                          ^